--- a/app/pages/onepage/index.html
+++ b/app/pages/onepage/index.html
@@ -100,7 +100,7 @@
                           <div class="line-major">
                             <p class="text prop-m0" tabindex="4"><b>Etapa 2</b></p>
                             <p class="text prop-mt1" tabindex="5">Elaborar um mapa para compreender o papel de cada ator no processo avaliativo. Baixe o arquivo para ter acesso a um modelo de Mapa de Atores.</p>
-                            <div class="container-link"><a tabindex="6" aria-label="" href="" target="_blank" download="">
+                            <div class="container-link"><a tabindex="6" aria-label="" href="../../assets/pdf/exemplo-mapa-atores.pdf" target="_blank" download="exemplo-mapa-atores.pdf">
                                 <div class="container-btn">
                                   <button class="botao prop-mt1 pulse infinite baixar" tabindex="7" aria-label="Baixar" item="" onClick="">
                                     <div class="container-image"><img class="prop-h4 img-shadow" src="../../assets/img/baixar.svg" alt="" aria-label="" tabindex="-1" aria-hidden="aria-hidden"/>
@@ -663,7 +663,7 @@
                 <p class="text prop-mt1" tabindex="2">Um <b>plano de M&A</b> deve estar <b>adequado ao contexto</b> da iniciativa que se pretende avaliar. Muitas vezes, é preciso ajustar o plano à realidade e às capacidades da organização, ou seja, é preciso garantir que o <b>plano seja flexível e adaptável</b> às mudanças de contexto.</p>
                 <p class="text" tabindex="3">Deve-se definir um <b>cronograma realista</b> para a entrega das atividades, considerando as etapas do projeto e a disponibilidade de recursos. É preciso considerar no cronograma as <b>etapas</b> de divulgação dos resultados da avaliação, bem como o <b>acompanhamento da implementação</b> dessas recomendações e quem será <b>responsável por isso</b> (etapas divulgação e utilização).</p>
                 <p class="text" tabindex="4">Baixe o arquivo para ter acesso a um modelo de cronograma de execução de um processo avaliativo.</p>
-                <div class="container-link"><a tabindex="5" aria-label="" href="" target="_blank" download="">
+                <div class="container-link"><a tabindex="5" aria-label="" href="../../assets/pdf/exemplo-cronograma-execucao.pdf" target="_blank" download="exemplo-cronograma-execucao.pdf">
                     <div class="container-btn">
                       <button class="botao prop-mt1 pulse infinite baixar" tabindex="6" aria-label="Baixar" item="" onClick="">
                         <div class="container-image"><img class="prop-h4 img-shadow" src="../../assets/img/baixar.svg" alt="" aria-label="" tabindex="-1" aria-hidden="aria-hidden"/>
